service2-deployment.yaml
# service2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-api-service
  namespace: weather-app
  labels:
    app: weather-api
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-api
  template:
    metadata:
      labels:
        app: weather-api
        tier: backend
    spec:
      containers:
      - name: weather-api
        image: docker.io/kvrr/weather-api-handler:v5.2
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "512Mi"
            cpu: "200m"
          limits:
            memory: "1Gi"
---

apiVersion: v1
kind: Service
metadata:
  name: weather-api-service
  namespace: weather-app
  labels:
    app: weather-api
spec:
  selector:
    app: weather-api
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: NodePort
