ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-ingress
  namespace: weather-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/allow-snippet-annotations: "true"
    # Streamlit specific headers
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Accept-Encoding "";
      proxy_set_header X-Forwarded-Proto $scheme;
      proxy_set_header X-Forwarded-Host $host;
      proxy_set_header X-Forwarded-Port $server_port;
spec:
  ingressClassName: nginx
  rules:
  - host: mausam.app
    http:
      paths:
      - path: /home
        pathType: Prefix
        backend:
          service:
            name: weather-home-service
            port:
              number: 8501
      - path: /dashboard
        pathType: Prefix
        backend:
          service:
            name: weather-dashboard-service
            port:
              number: 8501
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: weather-api-service
            port:
              number: 8080
